styles.css
/* html styling from swyx's 100 bytes of css  */

.content{
  padding: 3vw;
  position: absolute;
  left: 51%; 
  transform: translateX(-50%);
  width: 100%;
}

.indexbg {
  background: url('./images/indexbg.png');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: fixed;
  right: 1%; 
  height: 100vh;
  width: 100vw;
}


html.main {
  max-width: 65ch;
  line-height: 1.75;
  padding: 3vw;
  max-width: 600px;
  font-size: 1.25em;
  background-color: #fcfcfc;
}

html.normal {
  max-width: 65ch;
  margin: auto;
  line-height: 1.75;
  padding: 3vw;
  max-width: 600px;
  font-size: 1.25em;
  background-color: #fcfcfc;
}
  
@font-face {
    font-family: 'printveticaregular';
    src: url('https://yhhu.xyz/fonts/printvetica-webfont.woff2') format('woff2'),
         url('https://yhhu.xyz/fonts/printvetica-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
  font-family: 'Adobe Caslon Pro';
  src: url('./fonts/ACaslonPro-Regular.woff2') format('woff2'),
      url('./fonts/ACaslonPro-Regular.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

body.main{
  line-height: 1.2;
}

body.copy{
  line-height: 1.6;
}

.index {
  color: rgb(191, 191, 191);
  font-family: 'printveticaregular', Helvetica, Arial;
  font-style: bold;
  font-size: 17px;
}

.header {
    color: rgb(191, 191, 191);
    font-family: 'printveticaregular', Helvetica, Arial;
    font-style: bold;
    font-size: 16px;
}

.rightspacer {
  color: black;
  font-family: 'Georgia', 'Times New Roman', Times, serif;
  font-size: 17px;
  margin-left: 6em;
}

.readtime {
  color: rgb(170, 170, 170);
  font-family: 'Georgia', 'Times New Roman', Times, serif;
  font-size: 16px;
}

.italic {
  color: black;
  font-family: 'Georgia', 'Times New Roman', Times, serif;
  font-size: 17px;
  font-style: italic;
}

.indexcopy {
  font-family: 'Adobe Caslon Pro','Times New Roman', Times, serif;  
  color: rgba(0, 0, 0, 0.8);
  font-weight: normal;
  font-style: normal;
  line-height: 50%;
  margin-bottom: 2.5em; 
  font-size: 2.9vh;
}

p {
    color: black;
    font-family: 'Georgia', 'Times New Roman', Times, serif;
    font-size: 17px;
}

a.main {
    color: rgb(39, 86, 224);
    font-family: 'printveticaregular', Helvetica, Arial;
    font-size: 16px;
    margin-right: 2em;
    text-decoration: none
}

a.footnote {
  font-family: 'Georgia', 'Times New Roman', Times, serif;
  font-size: 15px;
  margin-left: 2px;
  text-decoration: none
}

a.inline, li {
    font-family: 'Georgia', 'Times New Roman', Times, serif;
    font-size: 17px;
    text-decoration: none
}

a.telescoping {
  font-family: 'Georgia', 'Times New Roman', Times, serif;
  font-size: 40px;
  text-decoration: none
}

img.grayscale {
  height: auto;
  max-width: 100%;
  filter: grayscale(100%) brightness(120%);
  border-radius: 4px;
}

img.index {
  height: auto;
  max-width: 100%;
  border-radius: 4px;
}

img.normal {
  height: auto;
  max-width: 100%;
  border-radius: 4px;
  margin-top: 10px;
}

img.border {
  height: auto;
  max-width: 99%;
  border-radius: 4px;
  border: 1px solid rgb(237, 237, 237);
  margin-top: 10px;
}

figcaption {
  color: rgb(152, 152, 152);
  font-family: 'Georgia', Helvetica, Arial;
  font-size: 15px;
  text-align: center;
}

/* tables from awsm.css */
table {
  display:inline-block;
  border-spacing:0;
  border-collapse:collapse;
  overflow-x:auto;
  max-width:100%;
  text-align:left;
  vertical-align:top;
  background:linear-gradient(rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.15) 100%) 0 0, linear-gradient(rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.15) 100%) 100% 0;
  background-attachment:scroll, scroll;
  background-size: 1px 100%, 1px 100%;
  background-repeat:no-repeat, no-repeat;
}
  
table caption {
    font-size:0.9em;
    background:white;
}

table td, table th {
    padding:0.35em 0.75em;
    vertical-align:top;
    font-family: 'Georgia', 'Times New Roman', Times, serif;
    font-size: 17px;
    border:1px solid #e6e6e6;
    border-top:0;
    border-left:0;
}
  
table td:first-child, table th:first-child {
    padding-left:0;
    background-image:linear-gradient(to right, white 50%, rgba(255, 255, 255, 0) 100%);
    background-size:2px 100%;
    background-repeat:no-repeat;
}
  
table td:last-child, table th:last-child {
    padding-right:0;
    border-right:0;
    background-image:linear-gradient(to left, white 50%, rgba(255, 255, 255, 0) 100%);
    background-position:100% 0;
    background-size:2px 100%;
    background-repeat:no-repeat;
}

table td:only-child, table th:only-child {
    background-image:linear-gradient(to right, white 50%, rgba(255, 255, 255, 0) 100%), linear-gradient(to left, white 50%, rgba(255, 255, 255, 0) 100%);
    background-position:0 0, 100% 0;
    background-size:2px 100%, 2px 100%;
    background-repeat:no-repeat, no-repeat;
}

table th {
    line-height:1.2;
}

.container {
  overflow: hidden;
}

.filterDiv {
  display: none; /* Hidden by default */
}

/* The "show" class is added to the filtered elements */
.show {
  display: block;
}

/* Style the buttons */
.btn {
  font-family: 'printveticaregular';
  color: rgb(35, 35, 35);
  font-size: 15px;
  margin-right: 0.5em;
  border: none;
  outline: none;
  padding: 8px 10px;
  border-radius: 25px;
  background-color: #f1f1f1;
  cursor: poGeorgia;
}

/* Add a light grey background on mouse-over */
.btn:hover {
  background-color: #ddd;
}

.btn.active {
  background-color: rgb(101, 101, 101);
  color: white;
}

